tests/miniJava/neg/001069_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = Main new java ( ) ; } }
